@@ -6,8 +6,8 @@ import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 
 import java.awt.Dimension;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * This abstract class defines an in-game playable button.
@@ -41,13 +41,8 @@ public abstract class AbstractButton extends Button {
     {
         if(!hasFlag)
         {
-            String filePath = null;
-            try {
-                filePath = URLDecoder.decode(String.valueOf(getClass().getClassLoader().getResource(pathToFlag)),"UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                e.printStackTrace();
-                //TODO: Handle error
-            }
+            String filePath;
+            filePath = URLDecoder.decode(String.valueOf(getClass().getClassLoader().getResource(pathToFlag)), StandardCharsets.UTF_8);
             Image image = new Image(filePath);
             ImageView imageView = new ImageView(image);
             setGraphic(imageView);
