@@ -6,8 +6,8 @@ import Logging.Log;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * In minesweeper, every tile which is not a bomb but has a neighboring bomb
@@ -29,15 +29,10 @@ public class NumberButton extends AbstractButton {
 
             Image image;
             pathToNumbers = pathToNumbers + score.toString() + ".png";
-            try {
-                String filePath = URLDecoder.decode(String.valueOf(getClass().getClassLoader().getResource(pathToNumbers)),"UTF-8");
-                image = new Image(filePath);
-                ImageView imageView = new ImageView(image);
-                setGraphic(imageView);
-            } catch (UnsupportedEncodingException ignored) {
-                //It cannot happen because the encoding will always be UTF-8 which is a valid encoding format.
-                Log.log("error",getClass().getName() + " " + ignored.getMessage());
-            }
+            String filePath = URLDecoder.decode(String.valueOf(getClass().getClassLoader().getResource(pathToNumbers)), StandardCharsets.UTF_8);
+            image = new Image(filePath);
+            ImageView imageView = new ImageView(image);
+            setGraphic(imageView);
             setDisable(true);
             setOpacity(1);
             RevealButton.incrementRevealedNumber();
